--- a/Kubernetes-manifests-file/Frontend/sevice.yaml
+++ b/Kubernetes-manifests-file/Frontend/sevice.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
-metadata:
-  name: api
+metadata: 
+  name: frontend
   namespace: workshop
-spec: 
+spec:
   ports:
-  - port: 8080
+  - port: 3000
     protocol: TCP
   type: ClusterIP
   selector:
-    role: api
+    role: frontend
