--- a/Kubernetes-manifests-file/database-mongo/secrets.yaml
+++ b/Kubernetes-manifests-file/database-mongo/secrets.yaml
@@ -5,5 +5,5 @@ metadata:
   name: mongo-sec
 type: Opaque
 data:  
-  password: cGFzc3dvcmQxMjM=   #Three-Tier-Project
-  username: YWRtaW4= #admin
+  password: Q29jb251dDEwCg==   #Three-tier-project Coconut10
+  username: VHJpc2hhCg== #admin Trisha
