--- a/Kubernetes-manifests-file/Backend/deployment.yaml
+++ b/Kubernetes-manifests-file/Backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 659674501634.dkr.ecr.us-east-2.amazonaws.com/three-tier-backend:latest_backend
+        image: public.ecr.aws/q5j4j6j3/three-tier-backend:latest_backend
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
